--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
-  </head>
-  <body>
-    <div id="app" style="width: 100vw;height: 100vh;"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + Vue</title>
+  <!-- 引入iconfont资源 -->
+  <link rel="stylesheet" href="//at.alicdn.com/t/c/font_4059165_eqoipvy5us.css" />
+
+</head>
+
+<body>
+  <div id="app" style="width: 100vw;height: 100vh;"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
